--- a/styles.css
+++ b/styles.css
@@ -1,17 +1,44 @@
 body{
     font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    background-color:chocolate;
+    background-color:seagreen;
     color:oldlace;
 }
 
 table{
     padding: 1%;
     color:sienna;
+    font-size: medium;
+}
+
+p{
+    font-size: medium;
+}
+
+input{
+    font-size: medium;
+    padding: 5px;
+    margin-left:10px;
+    border: solid 5%;
+    border-style: solid;
+    border-radius: 10px;
+    border-color: sienna;
+    background-color:oldlace;
+}
+
+.title{
+    padding: 2%;
+    text-align: center;
 }
 
 .adj-calc-div{
-    padding: 2%;
-    width: auto;
+    padding: 2%; 
+    width: auto; 
+    text-align: center;
+    max-width: 90%; 
+    position: relative; 
+    display: block; 
+    margin-left: auto; 
+    margin-right: auto;
     background-color:oldlace;
 }
 
@@ -30,19 +57,21 @@ table{
 
 .button{
     position: relative;
-    padding: .5%;
-    background-color:chocolate;
+    padding: 2%;
+    background-color:seagreen;
     color:oldlace;
-    border-color:sienna;
-    border-style: outset;
-    font-size:small;
+    border-style: solid;
+    border-color: seagreen;
+    border-radius: 10px;
+    font-size: medium;
 }
 .button:hover{
     position: relative;
-    padding: .5%;
+    padding: 2%;
     background-color: sienna;
     color:oldlace;
-    border-color: chocolate;
-    border-style: inset;
-    font-size:small;
+    border-style: solid;
+    border-color: sienna;
+    border-radius: 10px;
+    font-size:medium;
 }
